src/rules/given/snapshots/tests__de_these_courses_1.snap
---
created: "2019-02-27T18:11:59.438462Z"
creator: insta@0.6.3
source: src/rules/given/tests.rs
expression: actual
---
Rule {
    given: TheseCourses {
        courses: [
            Value(
                Rule {
                    course: "ASIAN 110",
                    grade: None,
                    section: None,
                    year: None,
                    semester: None,
                    lab: None,
                    can_match_used: None
                }
            ),
            Value(
                Rule {
                    course: "ASIAN 110",
                    grade: None,
                    section: None,
                    year: None,
                    semester: None,
                    lab: None,
                    can_match_used: None
                }
            )
        ],
        repeats: First,
        what: Courses
    },
    limit: Some(
        []
    ),
    filter: Some(
        {}
    ),
    action: Action {
        lhs: Count,
        op: Some(
            GreaterThan
        ),
        rhs: Some(
            Integer(
                2
            )
        )
    }
}
