src/rules/given/snapshots/tests__ser_all_courses.snap
---
created: "2019-02-27T18:15:38.822590Z"
creator: insta@0.6.3
source: src/rules/given/tests.rs
expression: data
---
{
  "given": "courses",
  "what": courses,
  "limit": Some([
  ]),
  "where": Some({
  }),
  "do": Action(
    lhs: Count,
    op: Some(GreaterThan),
    rhs: Some(Integer(2)),
  ),
}
