src/rules/given/snapshots/tests__ser_areas.snap
---
created: "2019-03-03T17:30:19.986351Z"
creator: insta@0.6.3
source: src/rules/given/tests.rs
expression: data
---
{
  "given": "areas",
  "what": areas,
  "where": Some(AreaClause(
  )),
  "do": Action(
    lhs: Count,
    op: Some(GreaterThan),
    rhs: Some(Integer(2)),
  ),
}
