src/rules/given/snapshots/tests__ser_these_reqs.snap
---
created: "2019-03-03T18:43:52.336372Z"
creator: insta@0.6.3
source: src/rules/given/tests.rs
expression: data
---
{
  "given": "these-requirements",
  "requirements": [
    "A Name 1",
    "A Name 2",
  ],
  "what": courses,
  "where": Some(CourseClause(
  )),
  "limit": Some([
  ]),
  "do": Action(
    lhs: Count,
    op: Some(GreaterThan),
    rhs: Some(Integer(2)),
  ),
}
